--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@
 } 
 
 body{
-  @apply bg-article-white font-Poppins;
+  @apply bg-white font-Poppins;
 }
 @tailwind components;
 @tailwind utilities;
